# KrakenUART

./: .gitignore  CMakeLists.txt  main.cpp  main_rx.cpp  main_traction.cpp  main_tx.cpp  no_verify.py  serial_port.cpp  server.cpp  server.cpp.save
Control Enzima Due 18032023/.cache/clangd/index/: callback_store.cpp.908504913328E2EB.idx  eurouart.cpp.9326A50498B9AE72.idx  eurouart.hpp.84D1F5638EBA5273.idx  function_objects.h.48ADF269888DC733.idx  idle.cpp.1DD0728665EA9594.idx  main.cpp.FB0A955B7C5C9209.idx  messages.cpp.4C753A20C4303311.idx  motion_controller.cpp.87735BE98E397CD8.idx  motion_controller.hpp.FC1AD0A443C15F31.idx  parser.cpp.B74AA411574EC71E.idx  pines_&_constexpr.hpp.43D9B09220A484EE.idx  primitives.cpp.A2D1A00BE0262A25.idx  reading_body.cpp.2E9E5820DBBC5614.idx  reading_header.cpp.F960DAC207C6EF2C.idx  serial.cpp.FCF604C0CCB22BA1.idx  timer_&_pwm.cpp.733691EE89A6F1A9.idx  timer_&_pwm.hpp.BB752AD012BB048E.idx  waiting_ack.cpp.A9FE890A7EBBF1D5.idx
Control Enzima Due 18032023/include/: eurouart.hpp  motion_controller.hpp
Control Enzima Due 18032023/src/: eurouart.cpp  main.cpp
Control Enzima Due 18032023/src/tracciвn/: motion_controller.cpp
Control Tactico Due 06032023/: platformio.ini
Control Tactico Due 06032023/include/: eurouart.hpp  motion_controller.hpp  pines_&_constexpr.hpp
Control Tactico Due 06032023/src/: eurouart.cpp  main.cpp
Control Tactico Due 06032023/src/tracciвn/: motion_controller.cpp
client/: platformio.ini
client/src/: main.cpp
shared/: CMakeLists.txt  protocol.hpp
shared/headers/: messages.hpp  msg_ids.hpp  parser.hpp  primitives.hpp  serial.hpp  utils.hpp
shared/sources/: callback_store.cpp  messages.cpp  parser.cpp  primitives.cpp  serial.cpp
shared/sources/parser_states/: idle.cpp  reading_body.cpp  reading_header.cpp  waiting_ack.cpp
